allthingszerg.yml
apiVersion: v1
kind: Service
metadata:
  name: allthingszerg
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4567
  selector:
    app: allthingszerg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allthingszerg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allthingszerg
  template:
    metadata:
      labels:
        app: allthingszerg
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: allthingszerg
        image: docker.pkg.github.com/joshleblanc/all-things-zerg/allthingszerg
        ports:
        - containerPort: 4567
        imagePullPolicy: Always
