bookstore.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstore
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9292
  selector:
    app: bookstore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: bookstore
        image: docker.pkg.github.com/joshleblanc/bookstore/bookstore
        ports:
        - containerPort: 9292
        imagePullPolicy: Always
