code-server.yml
apiVersion: v1
kind: Namespace
metadata:
        name: code-server
---
apiVersion: v1
kind: Service
metadata:
        name: code-server
        namespace: code-server
spec:
        ports: 
        - port: 80
          targetPort: 8080
        selector:
                app: code-server
---
apiVersion: apps/v1  
kind: Deployment
metadata:
        labels:
                app: code-server
        name: code-server
        namespace: code-server
spec:
        selector:
                matchLabels:
                        app: code-server
        replicas: 1
        template:
                metadata:
                        labels:
                                app: code-server
                spec:
                        containers:
                                - image: codercom/code-server
                                  imagePullPolicy: Always
                                  name: code-server
                                  ports:
                                          - containerPort: 8080
