directus.yml
apiVersion: v1
kind: Service
metadata:
  name: directus
  labels:
    app: directus
spec:
  type: NodePort
  ports:
   - port: 80
  selector:
   app: directus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      containers:
        - name: directus
          image: directus/directus:v8-apache
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/directus/config
              name: config
            - mountPath: /var/directus/public/uploads
              name: uploads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: directus-config-pvc
        - name: uploads
          persistentVolumeClaim:
              claimName: directus-uploads-pvc
