famtime.yml
apiVersion: v1
kind: Service
metadata:
  name: famtime
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: famtime
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: famtime
  template:
    metadata:
      labels:
        app: famtime
    spec:
      containers:
      - name: famtime
        image: horizonshadow/famtime
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
