gnashblade.yml
apiVersion: v1
kind: Service
metadata:
  name: gnashblade
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gnashblade
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnashblade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gnashblade
  template:
    metadata:
      labels:
        app: gnashblade
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: gnashblade
        image: docker.pkg.github.com/joshleblanc/gnashblade/gnashblade
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
