sc2overwatch.yml
apiVersion: v1
kind: Service
metadata:
  name: sc2overwatch
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sc2overwatch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc2overwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sc2overwatch
  template:
    metadata:
      labels:
        app: sc2overwatch
    spec:
      containers:
      - name: sc2overwatch
        image: horizonshadow/sc2overwatch
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
