secret-santa.yml
apiVersion: v1
kind: Service
metadata:
  name: secret-santa
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: secret-santa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-santa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-santa
  template:
    metadata:
      labels:
        app: secret-santa
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: secret-santa
        image: docker.pkg.github.com/joshleblanc/secret-santa/secret-santa
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
