view_component_reflex_expo.yml
apiVersion: v1
kind: Service
metadata:
  name: view_component_reflex_expo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: view_component_reflex_expo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: view_component_reflex_expo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: view_component_reflex_expo
  template:
    metadata:
      labels:
        app: view_component_reflex_expo
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: view_component_reflex_expo
        image: docker.pkg.github.com/joshleblanc/view_component_reflex_expo/view_component_reflex_expo
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
