grafana.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: prometheus-operator
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - grafana.grep.sh
    secretName: letsencrypt-prod
  rules:
  - host: grafana.grep.sh
    http:
      paths:
      - backend:
          serviceName: prometheus-operator-grafana
          servicePort: 80
