ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - famti.me
    - secret-santa.grep.sh
    - sc2overwatch.com
    - gnashblade.grep.sh
    - pgadmin.grep.sh
    - allthingszerg.com
    - wants.covertocoverbooks.ca
    - gnashbla.de
    secretName: letsencrypt-prod
  rules:
  - host: famti.me
    http:
      paths:
      - backend:
          serviceName: famtime
          servicePort: 80
  - host: secret-santa.grep.sh
    http:
      paths:
      - backend:
          serviceName: secret-santa
          servicePort: 80
  - host: sc2overwatch.com
    http:
      paths:
      - backend:
          serviceName: sc2overwatch
          servicePort: 80
  - host: gnashblade.grep.sh
    http:
      paths:
      - backend:
          serviceName: gnashblade
          servicePort: 80
  - host: gnashbla.de
    http:
      paths:
      - backend:
          serviceName: gnashblade
          servicePort: 80
  - host: pgadmin.grep.sh
    http:
      paths:
        - backend:
            serviceName: pgadmin
            servicePort: 80
  - host: allthingszerg.com
    http:
      paths:
        - backend:
            serviceName: allthingszerg
            servicePort: 80
  - host: wants.covertocoverbooks.ca
    http:
      paths:
        - backend:
            serviceName: bookstore
            servicePort: 80
