juiceboxify.yml
apiVersion: v1
kind: Service
metadata:
  name: juiceboxify
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4567
  selector:
    app: juiceboxify
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: juiceboxify
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - juiceboxify.me
    secretName: letsencrypt-prod
  rules:
  - host: juiceboxify.me
    http:
      paths:
      - backend:
          serviceName: juiceboxify
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceboxify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juiceboxify
  template:
    metadata:
      labels:
        app: juiceboxify
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: juiceboxify
        image: docker.pkg.github.com/joshleblanc/juiceboxify.me/juiceboxify
        ports:
        - containerPort: 4567
        imagePullPolicy: Always
